# computational_geometry

./: CMakeLists.txt
include/: ConvexHull2D.cpp  ConvexHull2D.h  ConvexHull2DOpenGL.cpp  ConvexHull2DOpenGL.h  HullOpenGL.cpp  HullOpenGL.h  MergeSort.cpp  MergeSort.h  Point.h  ProjectHeaders.h
src/: test.cpp  testOpenGl.cpp
